--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,7 +1,13 @@
 
+configurations.maybeCreate("default")
+artifacts.add("default", file('securewallet.aar'))
+
 buildscript {
     repositories {
         jcenter()
+        flatDir {
+            dirs 'libs'
+        }
     }
 
     dependencies {
@@ -28,9 +34,15 @@ android {
 
 repositories {
     mavenCentral()
+    flatDir {
+        dirs 'libs'
+    }
 }
 
 dependencies {
     compile 'com.facebook.react:react-native:+'
+    implementation fileTree(dir: 'libs', include: ['*.aar'])
+    implementation fileTree(dir: 'libs/securewallet.aar', include: ['core-ktx-1.1.0.aar'])
+    implementation fileTree(dir: 'libs/securewallet.aar', include: ['biometric-1.0.0'])
 }
   
