--- a/android/libs/build.gradle
+++ b/android/libs/build.gradle
@@ -1,2 +1,2 @@
 configurations.maybeCreate("default")
-artifacts.add("default", file('securewallet.aar'))
+artifacts.add("default", file('securewallet-test.aar'))
